@@ -1,3 +1,7 @@
+2009-03-31 Riccardo Mottola <rmottola@users.sf.net>
+	
+	* PCSplitView: removed and replaced with standard NSSplitView in all instances
+	
 2009-03-28 Sergii Stoian <stoyan255@gmail.com>
 
 	* Framework/PCProjectBuilder.m: 
